--- a/students/Reutova/src/styles/style.css
+++ b/students/Reutova/src/styles/style.css
@@ -3,6 +3,11 @@ html, body, #app {
     height: 100%;
 }
 
+.message-field-wrapper {
+    height: 100%;
+    width: 100%;
+}
+
 .message-field {
     display: flex;
     flex-direction: column;
@@ -14,22 +19,12 @@ html, body, #app {
     box-sizing: border-box;
 }
 
-.layout {
-    height: 80%;
-    width: 70%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
 .chatlist {
     height: 80%;
     width: 30%;
     margin: auto;
+    background-color: #e2e2e2;
 }
-
 .message {
     background-color: lightblue;
     padding: 5px 15px;
@@ -49,8 +44,8 @@ html, body, #app {
     margin-top: 12px;
 }
 .header {
-    width: 70%;
-    height: 20%;
+    width: 700px;
+    height: 50px;
     background-color: rgb(48, 108, 128);
     text-align: center;
     color:lightblue;
@@ -58,8 +53,8 @@ html, body, #app {
 }
 
 .layout-main {  
-    height: 100%;  
-    width: 70%;
+    height: 400px;  
+    width: 700px;
     margin: auto;
     display: flex;
     align-items: center;    
@@ -68,8 +63,8 @@ html, body, #app {
 }
 
 .chatarea {
-    height: 100%;  
-    width: 70%;
+    height: 400px;  
+    width: 100%;
     margin: auto;
     display: flex;
     
